<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wattabyte.pushnotification.ReplyActivity" >

    <TextView
        android:id="@+id/requestName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/requestMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/requestName"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/requestMessage"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/accept" />

    <Button
        android:id="@+id/reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/requestMessage"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:text="@string/reject" />

</RelativeLayout>