<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

       
         <TextView
             android:id="@+id/gCount" 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:paddingRight="20dp"
             android:text="@string/goldValue" 
             android:textAppearance="?android:attr/textAppearanceLarge"/>

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/pName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="20dp"
            android:text="@string/playerName" />
        
         <TextView
             android:id="@+id/pRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/pName"
            android:layout_alignParentRight="true"
            android:paddingRight="20dp"
            android:text="@string/playerRole" />

         <TextView
             android:id="@+id/pGold" 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/pRole"
             android:layout_alignBottom="@+id/pRole"
             android:layout_centerHorizontal="true"
             android:paddingRight="20dp"
             android:text="@string/playerGold" />

    </RelativeLayout>
    
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="455dp"
         android:layout_weight="0.39" >
     </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="2dp" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="24dp"
            android:text="Done" />

    </RelativeLayout>

</LinearLayout>