<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fbUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="83dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.facebook.widget.ProfilePictureView
            android:id="@+id/selection_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            facebook:preset_size="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="83dp"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:text="@string/playerName"
            android:textColor="@color/blue"/>
        <EditText 
            android:id="@+id/bindaasName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playerHint"
            android:textColorHint="@color/red"/>
        <Button 
            android:id="@+id/bindaasButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bindaasName"/>
        
    </LinearLayout>

</RelativeLayout>